--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.user.lvndb"
+        applicationId "com.example.user.surokkha"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -25,7 +25,11 @@ dependencies {
     })
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:cardview-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.google.firebase:firebase-core:12.0.1'
+    implementation 'com.google.firebase:firebase-messaging:12.0.1'
 }
+apply plugin: 'com.google.gms.google-services'
