--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.firebase:firebase-core:12.0.1'
     implementation 'com.google.firebase:firebase-messaging:12.0.1'
+    implementation 'com.google.firebase:firebase-auth:12.0.1'
+    implementation 'com.google.firebase:firebase-database:12.0.1'
+
+    implementation 'com.tuyenmonkey:mkloader:1.4.0'
+    implementation ('com.lamudi.phonefield:phone-field:0.1.3@aar') {
+        transitive = true
+    }
+    implementation 'com.github.GoodieBag:Pinview:v1.3'
+
 }
 apply plugin: 'com.google.gms.google-services'
