--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ allprojects {
     repositories {
         jcenter()
         google()
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
+        }
+        maven { url "https://jitpack.io" }
     }
 }
 
