--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.user.surokkha"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -33,6 +33,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:12.0.1'
     implementation 'com.google.firebase:firebase-auth:12.0.1'
     implementation 'com.google.firebase:firebase-database:12.0.1'
+
+    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 
     implementation 'com.tuyenmonkey:mkloader:1.4.0'
     implementation ('com.lamudi.phonefield:phone-field:0.1.3@aar') {
